...
                            }
                        }
                        .buttonStyle(.glass)
                        .font(.subheadline)
                        .fontWeight(.bold)
                        .textCase(.uppercase)
                        .accessibilityIdentifier("InsertButton")
                    }
                    .symbolEffect(
                        .bounce,
                        options: .nonRepeating
                    )
                    .symbolVariant(.fill)
...
