...
	@State private var chartScrollPosition = Date.now
	@State private var selectedPointMarkDate: Date?

	// MARK: - Layouts

	var body: some View {
		Chart(counters) { counter in
			let date = counter.date ?? .now

			LineMark(x: .value("Date",
							   date,
							   unit: .day),
					 y: .value("Count",
...
